Scalability SAMPLE PROJECT: ANDROID COMPILATION ON THE CMD-LINE

--- a/samples/Scalability/android/ant.properties
+++ b/samples/Scalability/android/ant.properties
@@ -1,2 +1,2 @@
-source.dir = ../../../../../Cinder/blocks/chronotext-blocks-base/src;src
+source.dir = ../../../../../../Cinder/blocks/chronotext-blocks-base/src;src
 asset.dir = ../resources
