--- a/samples/Scalability/android/.project
+++ b/samples/Scalability/android/.project
@@ -6,60 +6,6 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>org.eclipse.cdt.managedbuilder.core.genmakebuilder</name>
-			<triggers>clean,full,incremental,</triggers>
-			<arguments>
-				<dictionary>
-					<key>?children?</key>
-					<value>?name?=outputEntries\|?children?=?name?=entry\\\\\\\|\\\|?name?=entry\\\\\\\|\\\|\||</value>
-				</dictionary>
-				<dictionary>
-					<key>?name?</key>
-					<value></value>
-				</dictionary>
-				<dictionary>
-					<key>org.eclipse.cdt.make.core.append_environment</key>
-					<value>true</value>
-				</dictionary>
-				<dictionary>
-					<key>org.eclipse.cdt.make.core.buildArguments</key>
-					<value></value>
-				</dictionary>
-				<dictionary>
-					<key>org.eclipse.cdt.make.core.buildCommand</key>
-					<value>ndk-build</value>
-				</dictionary>
-				<dictionary>
-					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
-					<value>clean</value>
-				</dictionary>
-				<dictionary>
-					<key>org.eclipse.cdt.make.core.contents</key>
-					<value>org.eclipse.cdt.make.core.activeConfigSettings</value>
-				</dictionary>
-				<dictionary>
-					<key>org.eclipse.cdt.make.core.enableAutoBuild</key>
-					<value>false</value>
-				</dictionary>
-				<dictionary>
-					<key>org.eclipse.cdt.make.core.enableCleanBuild</key>
-					<value>true</value>
-				</dictionary>
-				<dictionary>
-					<key>org.eclipse.cdt.make.core.enableFullBuild</key>
-					<value>true</value>
-				</dictionary>
-				<dictionary>
-					<key>org.eclipse.cdt.make.core.stopOnError</key>
-					<value>true</value>
-				</dictionary>
-				<dictionary>
-					<key>org.eclipse.cdt.make.core.useDefaultBuildCmd</key>
-					<value>true</value>
-				</dictionary>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
 			<name>com.android.ide.eclipse.adt.ResourceManagerBuilder</name>
 			<arguments>
 			</arguments>
@@ -79,49 +25,43 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.cdt.managedbuilder.core.ScannerConfigBuilder</name>
-			<triggers>full,incremental,</triggers>
-			<arguments>
-			</arguments>
-		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>com.android.ide.eclipse.adt.AndroidNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>org.eclipse.cdt.core.cnature</nature>
-		<nature>org.eclipse.cdt.core.ccnature</nature>
-		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
-		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
 	<linkedResources>
 		<link>
 			<name>assets</name>
 			<type>2</type>
-			<locationURI>RESOURCES_FOLDER</locationURI>
+			<locationURI>RES_COMMON</locationURI>
 		</link>
 		<link>
-			<name>chronotext</name>
+			<name>src-chronotext</name>
 			<type>2</type>
-			<locationURI>CHRONOTEXT_FOLDER</locationURI>
+			<locationURI>SRC_CHRONOTEXT</locationURI>
 		</link>
 		<link>
-			<name>sources</name>
+			<name>src-common</name>
 			<type>2</type>
-			<locationURI>SOURCE_FOLDER</locationURI>
+			<locationURI>SRC_COMMON</locationURI>
 		</link>
 	</linkedResources>
 	<variableList>
 		<variable>
-			<name>CHRONOTEXT_FOLDER</name>
-			<value>$%7BPARENT-5-PROJECT_LOC%7D/Cinder/blocks/chronotext-blocks-base/src</value>
+			<name>CINDER_PATH</name>
+			<value>file:/Users/arielm/Documents/ANDROID2/Cinder</value>
 		</variable>
 		<variable>
-			<name>RESOURCES_FOLDER</name>
+			<name>RES_COMMON</name>
 			<value>$%7BPARENT-1-PROJECT_LOC%7D/resources</value>
 		</variable>
 		<variable>
-			<name>SOURCE_FOLDER</name>
+			<name>SRC_CHRONOTEXT</name>
+			<value>$%7BCINDER_PATH%7D/blocks/chronotext-blocks-base/src</value>
+		</variable>
+		<variable>
+			<name>SRC_COMMON</name>
 			<value>$%7BPARENT-1-PROJECT_LOC%7D/src</value>
 		</variable>
 	</variableList>
