--- a/samples/Scalability/osx/Info.plist
+++ b/samples/Scalability/osx/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>CinderApp.icns</string>
+	<string>icon.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.libcinder.GL2Test1</string>
 	<key>CFBundleInfoDictionaryVersion</key>
