--- a/samples/Scalability/android/AndroidManifest.xml
+++ b/samples/Scalability/android/AndroidManifest.xml
@@ -1,10 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.chronotext.samples"
+    package="org.chronotext.Scalability"
     android:versionCode="1"
     android:versionName="1.0" >
     <uses-sdk
-        android:minSdkVersion="10"
-        android:targetSdkVersion="15" />
+        android:minSdkVersion="10" />
     <application
         android:label="Scalability"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
