UPGRADING samples/Scalability: 1- USING org.chronotext.Scalability PACKAGE INSTEAD OF org.chronotext.samples — BECAUSE PACKAGES SHOULD BE UNIQUE (I.E. PER APP) 2- NOT DEFINING android:targetSdkVersion="15" IN MANIFEST (NO “> SDK 10” FEATURES REQUIRED…) 3- ADDING android:configChanges="keyboardHidden|orientation" — WITHOUT THAT ( APPARENTLY WHEN “SDK >= 12” IS DEFINED), THE APP WILL CRASH IF IT IS IN LANDSCAPE MODE AND android:screenOrientation="portrait" (OR VICE-VERSA)

--- a/samples/Scalability/android/AndroidManifest.xml
+++ b/samples/Scalability/android/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.chronotext.samples"
+    package="org.chronotext.Scalability"
     android:versionCode="1"
     android:versionName="1.0" >
     <uses-sdk
-        android:minSdkVersion="10"
-        android:targetSdkVersion="15" />
+        android:minSdkVersion="10" />
     <application
         android:label="Scalability"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
             android:name=".MainActivity"
+            android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
