samples/Scalability: TRYING TO IMPLEMENT android:configCHanges=“screenSize…” — NO SUCCESS SO FAR (I.E. APP IS RESTARTED WHEN BACK FROM PAUSE OR SLEEP…)

--- a/samples/Scalability/android/AndroidManifest.xml
+++ b/samples/Scalability/android/AndroidManifest.xml
@@ -3,13 +3,14 @@
     android:versionCode="1"
     android:versionName="1.0" >
     <uses-sdk
-        android:minSdkVersion="10" />
+        android:minSdkVersion="10"
+        android:maxSdkVersion="13" />
     <application
         android:label="Scalability"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
             android:name=".MainActivity"
-            android:configChanges="keyboardHidden|orientation"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
