--- a/samples/Scalability/android/AndroidManifest.xml
+++ b/samples/Scalability/android/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.chronotext.Scalability"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
     <uses-sdk
         android:minSdkVersion="10"
-        android:maxSdkVersion="13" />
+        android:targetSdkVersion="13" />
     <application
         android:label="Scalability"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity
             android:name=".MainActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
