--- a/samples/GrapeFrukt/android/AndroidManifest.xml
+++ b/samples/GrapeFrukt/android/AndroidManifest.xml
@@ -11,7 +11,7 @@
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="landscape">
+            android:screenOrientation="sensorLandscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
