--- a/samples/PathWorks2/android/AndroidManifest.xml
+++ b/samples/PathWorks2/android/AndroidManifest.xml
@@ -1,15 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.chronotext.PathWorks2"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
     <uses-sdk
-        android:minSdkVersion="10" />
+        android:minSdkVersion="11"
+        android:targetSdkVersion="15" />
     <application
         android:label="PathWorks2"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
             android:name=".MainActivity"
-            android:configChanges="keyboardHidden|orientation"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
