--- a/samples/MobileTest/osx/Config.xcconfig
+++ b/samples/MobileTest/osx/Config.xcconfig
@@ -1,5 +1,3 @@
-// PROJECT
-
 ARCHS = $(ARCHS_STANDARD_64_BIT)
 SDKROOT = macosx
 MACOSX_DEPLOYMENT_TARGET = 10.7
@@ -10,23 +8,18 @@ GCC_WARN_UNUSED_VARIABLE = YES
 GCC_INLINES_ARE_PRIVATE_EXTERN = YES
 GCC_SYMBOLS_PRIVATE_EXTERN = NO
 GCC_PRECOMPILE_PREFIX_HEADER = YES
+DEAD_CODE_STRIPPING = YES
+COPY_PHASE_STRIP = NO
 
-CINDER_PATH = ../../../../../../Cinder
+CINDER_PATH = ../../../../../
 
 ALWAYS_SEARCH_USER_PATHS = YES
 USER_HEADER_SEARCH_PATHS = "$(CINDER_PATH)/boost" "$(CINDER_PATH)/blocks/new-chronotext-toolkit/src"
 HEADER_SEARCH_PATHS = ../include "$(CINDER_PATH)/include" "$(CINDER_PATH)/src/libtess2"
 LIBRARY_SEARCH_PATHS =
 
-// TARGET
-
-COMBINE_HIDPI_IMAGES = YES
-COPY_PHASE_STRIP = NO
-DEAD_CODE_STRIPPING = YES
-GCC_INLINES_ARE_PRIVATE_EXTERN = YES
-GCC_SYMBOLS_PRIVATE_EXTERN = NO
+//
 
 PRODUCT_NAME = MobileTest
 INFOPLIST_FILE = Info.plist
 GCC_PREFIX_HEADER = Prefix.pch
-WRAPPER_EXTENSION = app
