--- a/samples/MobileTest/android/ant.properties
+++ b/samples/MobileTest/android/ant.properties
@@ -1,2 +1,2 @@
-source.dir = ../../../../../../Cinder/blocks/new-chronotext-toolkit/android/src;src
+source.dir = ../../../../../blocks/new-chronotext-toolkit/android/src;src
 asset.dir = ../resources
