--- a/samples/TextDune/ios/Info.plist
+++ b/samples/TextDune/ios/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDisplayName</key>
 	<string>${PRODUCT_NAME}</string>
+    <key>UIApplicationExitsOnSuspend</key>
+    <true/>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
