--- a/samples/TextDune/ios/Config.xcconfig
+++ b/samples/TextDune/ios/Config.xcconfig
@@ -1,7 +1,7 @@
-ARCHS = armv7
+ARCHS = $(ARCHS_STANDARD)
 SDKROOT = iphoneos
 TARGETED_DEVICE_FAMILY = 1,2
-IPHONEOS_DEPLOYMENT_TARGET = 5.0
+IPHONEOS_DEPLOYMENT_TARGET = 5.1.1
 CLANG_CXX_LANGUAGE_STANDARD = c++0x
 CLANG_CXX_LIBRARY = libc++
 CLANG_WARN_CONSTANT_CONVERSION = YES
@@ -15,12 +15,21 @@ GCC_WARN_UNUSED_VARIABLE = YES
 GCC_PRECOMPILE_PREFIX_HEADER = YES
 DEAD_CODE_STRIPPING = YES
 
+COMPRESS_PNG_FILES = NO
+IPHONE_OPTIMIZE_OPTIONS = -skip-PNGs
+
+//
+
 CINDER_PATH = ../../../../../
 
 ALWAYS_SEARCH_USER_PATHS = YES
 USER_HEADER_SEARCH_PATHS = "$(CINDER_PATH)/boost" "$(CINDER_PATH)/blocks/new-chronotext-toolkit/src"
-HEADER_SEARCH_PATHS = ../include ../../../Common "$(CINDER_PATH)/include" "$(CINDER_PATH)/src/libtess2"
+HEADER_SEARCH_PATHS = ../include "$(CINDER_PATH)/include" "$(CINDER_PATH)/src/libtess2"
+
 LIBRARY_SEARCH_PATHS =
+BASE_OTHER_LDFLAGS = -lz
+
+BASE_GCC_PREPROCESSOR_DEFINITIONS =
 
 //
 
@@ -30,7 +39,3 @@ GCC_PREFIX_HEADER = Prefix.pch
 
 CODE_SIGN_IDENTITY = iPhone Developer
 PROVISIONING_PROFILE =
-
-COMPRESS_PNG_FILES = NO
-IPHONE_OPTIMIZE_OPTIONS = -skip-PNGs
-GCC_PREPROCESSOR_DEFINITIONS_NOT_USED_IN_PRECOMPS = FORCE_STB_FOR_PNG_AND_JPG
