--- a/samples/TextDune/osx/ReleaseConfig.xcconfig
+++ b/samples/TextDune/osx/ReleaseConfig.xcconfig
@@ -1,10 +1,17 @@
 #include "Config.xcconfig"
 
+ONLY_ACTIVE_ARCH = YES
+COPY_PHASE_STRIP = NO
+STRIP_INSTALLED_PRODUCT = YES
+
 GCC_OPTIMIZATION_LEVEL = 3
 GCC_GENERATE_DEBUGGING_SYMBOLS = NO
 GCC_FAST_MATH = YES
-STRIP_INSTALLED_PRODUCT = YES
-
-OTHER_LDFLAGS = -lz "$(CINDER_PATH)/lib/libcinder.a"
 
 DEBUG_INFORMATION_FORMAT = dwarf-with-dsym
+
+//
+
+OTHER_LDFLAGS = $(BASE_OTHER_LDFLAGS) "$(CINDER_PATH)/lib/libcinder.a"
+
+GCC_PREPROCESSOR_DEFINITIONS = $(BASE_GCC_PREPROCESSOR_DEFINITIONS)
