develop: MORE xconfig GOODNESS (VIA THE TextDune SAMPLE)

--- a/samples/TextDune/ios/ReleaseConfig.xcconfig
+++ b/samples/TextDune/ios/ReleaseConfig.xcconfig
@@ -7,6 +7,8 @@ VALIDATE_PRODUCT = NO
 GCC_OPTIMIZATION_LEVEL = 3
 OTHER_CFLAGS = -DNS_BLOCK_ASSERTIONS=1
 
+DEBUG_INFORMATION_FORMAT = dwarf
+
 //
 
 OTHER_LDFLAGS[sdk=iphonesimulator*][arch=*] = $(BASE_OTHER_LDFLAGS) "$(CINDER_PATH)/lib/libcinder-iphone-sim.a"
