--- a/samples/TextDune/osx/Config.xcconfig
+++ b/samples/TextDune/osx/Config.xcconfig
@@ -8,7 +8,10 @@ GCC_WARN_ABOUT_RETURN_TYPE = YES
 GCC_WARN_UNUSED_VARIABLE = YES
 GCC_INLINES_ARE_PRIVATE_EXTERN = YES
 GCC_SYMBOLS_PRIVATE_EXTERN = NO
+
+GCC_OBJC_CALL_CXX_CDTORS = YES
 GCC_PRECOMPILE_PREFIX_HEADER = YES
+GCC_DEBUGGING_SYMBOLS = full
 DEAD_CODE_STRIPPING = YES
 
 //
