--- a/samples/TextDune/osx/DebugConfig.xcconfig
+++ b/samples/TextDune/osx/DebugConfig.xcconfig
@@ -7,6 +7,8 @@ STRIP_INSTALLED_PRODUCT = NO
 GCC_OPTIMIZATION_LEVEL = 0
 GCC_DYNAMIC_NO_PIC = NO
 
+DEBUG_INFORMATION_FORMAT = dwarf
+
 //
 
 OTHER_LDFLAGS = $(BASE_OTHER_LDFLAGS) "$(CINDER_PATH)/lib/libcinder_d.a"
