--- a/samples/TextDune/ios/Config.xcconfig
+++ b/samples/TextDune/ios/Config.xcconfig
@@ -4,6 +4,7 @@ TARGETED_DEVICE_FAMILY = 1,2
 IPHONEOS_DEPLOYMENT_TARGET = 5.1.1
 CLANG_CXX_LANGUAGE_STANDARD = c++0x
 CLANG_CXX_LIBRARY = libc++
+
 CLANG_WARN_CONSTANT_CONVERSION = YES
 CLANG_WARN_ENUM_CONVERSION = YES
 CLANG_WARN_INT_CONVERSION = YES
@@ -12,7 +13,10 @@ GCC_WARN_ABOUT_RETURN_TYPE = YES
 GCC_WARN_ABOUT_MISSING_PROTOTYPES = YES
 GCC_WARN_UNINITIALIZED_AUTOS = YES
 GCC_WARN_UNUSED_VARIABLE = YES
+
+GCC_OBJC_CALL_CXX_CDTORS = YES
 GCC_PRECOMPILE_PREFIX_HEADER = YES
+GCC_DEBUGGING_SYMBOLS = full
 DEAD_CODE_STRIPPING = YES
 
 COMPRESS_PNG_FILES = NO
