--- a/samples/TextDune/ios/DebugConfig.xcconfig
+++ b/samples/TextDune/ios/DebugConfig.xcconfig
@@ -7,6 +7,8 @@ GCC_OPTIMIZATION_LEVEL = 0
 GCC_DYNAMIC_NO_PIC = NO
 GCC_SYMBOLS_PRIVATE_EXTERN = NO
 
+DEBUG_INFORMATION_FORMAT = dwarf
+
 //
 
 OTHER_LDFLAGS[sdk=iphonesimulator*][arch=*] = $(BASE_OTHER_LDFLAGS) "$(CINDER_PATH)/lib/libcinder-iphone-sim_d.a"
