--- a/samples/TextDune/osx/ReleaseConfig.xcconfig
+++ b/samples/TextDune/osx/ReleaseConfig.xcconfig
@@ -1,14 +1,13 @@
 #include "Config.xcconfig"
 
 ONLY_ACTIVE_ARCH = YES
-COPY_PHASE_STRIP = NO
+COPY_PHASE_STRIP = YES
 STRIP_INSTALLED_PRODUCT = YES
 
 GCC_OPTIMIZATION_LEVEL = 3
-GCC_GENERATE_DEBUGGING_SYMBOLS = NO
 GCC_FAST_MATH = YES
 
-DEBUG_INFORMATION_FORMAT = dwarf-with-dsym
+DEBUG_INFORMATION_FORMAT = dwarf
 
 //
 
