develop: ATTEMPT TO HANDLE IPHONE 6 AND 6+ SCREEN-SIZES (REQUIRES SOME NEW “DUMMY LAUNCH IMAGES”.) TESTED VIA TextDune SAMPLE PROJECT. IT SEEMS TO WORK ON SIMULATOR (EVEN THOUGH “NATIVE-CONTENT-SCALE” IS 3 INSTEAD OF ~2.6 FOR IPHONE 6+). TODO: 1) TEST ON REAL DEVICES. 2) HANDLE “DISPLAY ZOOM” MODE.

--- a/samples/TextDune/ios/Info.plist
+++ b/samples/TextDune/ios/Info.plist
@@ -4,8 +4,8 @@
 <dict>
 	<key>CFBundleDisplayName</key>
 	<string>${PRODUCT_NAME}</string>
-    <key>UIApplicationExitsOnSuspend</key>
-    <true/>
+	<key>UIApplicationExitsOnSuspend</key>
+	<true/>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
@@ -32,6 +32,39 @@
 	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>UILaunchImages</key>
+	<array>
+		<dict>
+			<key>UILaunchImageMinimumOSVersion</key>
+			<string>8.0</string>
+			<key>UILaunchImageName</key>
+			<string>Default-667h</string>
+			<key>UILaunchImageOrientation</key>
+			<string>Portrait</string>
+			<key>UILaunchImageSize</key>
+			<string>{375, 667}</string>
+		</dict>
+		<dict>
+			<key>UILaunchImageMinimumOSVersion</key>
+			<string>8.0</string>
+			<key>UILaunchImageName</key>
+			<string>Default-736h</string>
+			<key>UILaunchImageOrientation</key>
+			<string>Portrait</string>
+			<key>UILaunchImageSize</key>
+			<string>{414, 736}</string>
+		</dict>
+		<dict>
+			<key>UILaunchImageMinimumOSVersion</key>
+			<string>7.0</string>
+			<key>UILaunchImageName</key>
+			<string>Default-568h</string>
+			<key>UILaunchImageOrientation</key>
+			<string>Portrait</string>
+			<key>UILaunchImageSize</key>
+			<string>{320, 568}</string>
+		</dict>
 	</array>
 </dict>
 </plist>
