--- a/samples/MobileTest/ios/DebugConfig.xcconfig
+++ b/samples/MobileTest/ios/DebugConfig.xcconfig
@@ -1,12 +1,16 @@
 #include "Config.xcconfig"
 
-COPY_PHASE_STRIP = NO
 ONLY_ACTIVE_ARCH = YES
+COPY_PHASE_STRIP = NO
+
 GCC_OPTIMIZATION_LEVEL = 0
 GCC_DYNAMIC_NO_PIC = NO
-GCC_SYMBOLS_PRIVATE_EXTERN = NO
 
-OTHER_LDFLAGS[sdk=iphonesimulator*][arch=*] = -lz "$(CINDER_PATH)/lib/libcinder-iphone-sim_d.a"
-OTHER_LDFLAGS[sdk=iphoneos*][arch=armv7] = -lz "$(CINDER_PATH)/lib/libcinder-iphone_d.a"
+DEBUG_INFORMATION_FORMAT = dwarf
 
-GCC_PREPROCESSOR_DEFINITIONS = DEBUG=1
+//
+
+OTHER_LDFLAGS[sdk=iphonesimulator*][arch=*] = $(BASE_OTHER_LDFLAGS) "$(CINDER_PATH)/lib/libcinder-iphone-sim_d.a"
+OTHER_LDFLAGS[sdk=iphoneos*][arch=*] = $(BASE_OTHER_LDFLAGS) "$(CINDER_PATH)/lib/libcinder-iphone_d.a"
+
+GCC_PREPROCESSOR_DEFINITIONS = $(BASE_GCC_PREPROCESSOR_DEFINITIONS) DEBUG=1
