--- a/samples/MobileTest/ios/ReleaseConfig.xcconfig
+++ b/samples/MobileTest/ios/ReleaseConfig.xcconfig
@@ -1,9 +1,17 @@
 #include "Config.xcconfig"
 
-COPY_PHASE_STRIP = YES
+ONLY_ACTIVE_ARCH = YES
+COPY_PHASE_STRIP = NO
+VALIDATE_PRODUCT = NO
+
 GCC_OPTIMIZATION_LEVEL = 3
 OTHER_CFLAGS = -DNS_BLOCK_ASSERTIONS=1
-VALIDATE_PRODUCT = YES
 
-OTHER_LDFLAGS[sdk=iphonesimulator*][arch=*] = -lz "$(CINDER_PATH)/lib/libcinder-iphone-sim.a"
-OTHER_LDFLAGS[sdk=iphoneos*][arch=armv7] = -lz "$(CINDER_PATH)/lib/libcinder-iphone.a"
+DEBUG_INFORMATION_FORMAT = dwarf
+
+//
+
+OTHER_LDFLAGS[sdk=iphonesimulator*][arch=*] = $(BASE_OTHER_LDFLAGS) "$(CINDER_PATH)/lib/libcinder-iphone-sim.a"
+OTHER_LDFLAGS[sdk=iphoneos*][arch=*] = $(BASE_OTHER_LDFLAGS) "$(CINDER_PATH)/lib/libcinder-iphone.a"
+
+GCC_PREPROCESSOR_DEFINITIONS = $(BASE_GCC_PREPROCESSOR_DEFINITIONS)
