--- a/samples/MobileTest/osx/ReleaseConfig.xcconfig
+++ b/samples/MobileTest/osx/ReleaseConfig.xcconfig
@@ -1,10 +1,16 @@
 #include "Config.xcconfig"
 
-GCC_OPTIMIZATION_LEVEL = 3
-GCC_GENERATE_DEBUGGING_SYMBOLS = NO
-GCC_FAST_MATH = YES
+ONLY_ACTIVE_ARCH = YES
+COPY_PHASE_STRIP = YES
 STRIP_INSTALLED_PRODUCT = YES
 
-OTHER_LDFLAGS = -lz "$(CINDER_PATH)/lib/libcinder.a"
+GCC_OPTIMIZATION_LEVEL = 3
+GCC_FAST_MATH = YES
 
-DEBUG_INFORMATION_FORMAT = dwarf-with-dsym
+DEBUG_INFORMATION_FORMAT = dwarf
+
+//
+
+OTHER_LDFLAGS = $(BASE_OTHER_LDFLAGS) "$(CINDER_PATH)/lib/libcinder.a"
+
+GCC_PREPROCESSOR_DEFINITIONS = $(BASE_GCC_PREPROCESSOR_DEFINITIONS)
