--- a/samples/TextWheel/osx/DebugConfig.xcconfig
+++ b/samples/TextWheel/osx/DebugConfig.xcconfig
@@ -1,9 +1,16 @@
 #include "Config.xcconfig"
 
 ONLY_ACTIVE_ARCH = YES
+COPY_PHASE_STRIP = NO
+STRIP_INSTALLED_PRODUCT = NO
+
 GCC_OPTIMIZATION_LEVEL = 0
 GCC_DYNAMIC_NO_PIC = NO
 
-OTHER_LDFLAGS = -lz "$(CINDER_PATH)/lib/libcinder_d.a" "$(CINDER_PATH)/blocks/Freetype/lib/osx/libfreetype.a" "$(CINDER_PATH)/blocks/hb-icu/lib/osx/libicu-common.a" "$(CINDER_PATH)/blocks/hb-icu/lib/osx/libhb.a"
+DEBUG_INFORMATION_FORMAT = dwarf
 
-GCC_PREPROCESSOR_DEFINITIONS = DEBUG=1
+//
+
+OTHER_LDFLAGS = $(BASE_OTHER_LDFLAGS) "$(CINDER_PATH)/lib/libcinder_d.a"
+
+GCC_PREPROCESSOR_DEFINITIONS = $(BASE_GCC_PREPROCESSOR_DEFINITIONS) DEBUG=1
