toolkit-xcode-project: PROGRESS…

--- a/xcode/ios/Config.xcconfig
+++ b/xcode/ios/Config.xcconfig
@@ -1,5 +1,5 @@
+ARCHS = $(ARCHS_STANDARD)
 SDKROOT = iphoneos
-SUPPORTED_PLATFORMS = iphonesimulator
 TARGETED_DEVICE_FAMILY = 1,2
 IPHONEOS_DEPLOYMENT_TARGET = 5.1.1
 CLANG_CXX_LANGUAGE_STANDARD = c++0x
@@ -23,12 +23,6 @@ COPY_PHASE_STRIP = NO
 
 //
 
-//SYMROOT = ../lib/ios
-//OBJROOT = build/
-//CONFIGURATION_BUILD_DIR = $(BUILD_DIR)
-
-//
-
 CINDER_PATH = ../../../
 
 ALWAYS_SEARCH_USER_PATHS = YES
@@ -39,4 +33,9 @@ BASE_GCC_PREPROCESSOR_DEFINITIONS =
 
 //
 
+//SYMROOT = ../lib/ios
+//OBJROOT = build/
+//CONFIGURATION_BUILD_DIR = $(BUILD_DIR)
+
 GCC_PREFIX_HEADER = ios/Prefix.pch
+PRODUCT_NAME = toolkit
